[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "radix256_sort_py"
version = "0.1.0"
description = "Fast Radix Sort (base 256) for Python implemented in Rust"
authors = [{name = "Tane Channel Technology"}]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
